(library
  (name lib)
  (inline_tests)
  (modules "leftist_heap" "lists" "arithmetic" "logic_and_codes" "binary_trees")
  (preprocess (pps ppx_inline_test ppx_deriving.show))
  (libraries base stdio unix))

(executable
  (modules "main")
  (preprocess (pps ppx_inline_test ppx_deriving.show))
  (libraries lib stdio unix)
  (name main))
